# WhatMatters

./: .gitignore  LICENSE  README.md  compute_features.py  gamma_crowd_gammaplanner.py  test.py  train.py
configs/DSP/: DSP_default.py  DSP_default_summit.py
configs/HOME/: HOME_default.py  HOME_summit_default.py
configs/HiVT/: hivt_default.py  hivt_summit_default.py
configs/LSTM/: LSTM_SUMMIT_basic_default.py  LSTM_SUMMIT_social_default.py  LSTM_basic_default.py  LSTM_social_default.py
configs/LaneGCN/: LaneGCN_default.py  LaneGCN_summit_default.py
configs/_base_/: eval.py
configs/argoverse_baseline/: constant_acceleration_n30_p6.py  constant_velocity_n30_p6.py  knn_nomap_nosocial_neigh6.py  knn_nomap_social_neigh6.py  summit_constant_acceleration_n30_p6.py  summit_constant_velocity_n30_p6.py  summit_knn_nomap_nosocial_neigh6.py  summit_knn_nomap_social_neigh6.py
model/: base_model.py
model/DSP/: DSP_wrapper.py  evaluation.py  loader.py  train.py  visualize.py
model/DSP/data_argo/: run_preprocess.py  summit_preprocess.py
model/DSP/networks/: dsp.py
model/DSP/scripts/: argo_preproc_all.sh  summit_preproc_all.sh
model/HOME/src/common_data_processing/: __init__.py  script_vectorize_hd_maps.py
model/HOME/src/config_parser/: config.py  raster.py
model/HOME/src/configs/: home.yaml  home_summit.yaml
model/HOME/src/home/: home_wrapper.py  script_evaluate_heatmap.py  script_train_heatmap.py  script_train_trajectory_forecaster.py
model/HiVT/: eval.py  train.py
model/HiVT/datamodules/: summit_v1_datamodule.py
model/HiVT/datasets/: __init__.py  summit_v1_dataset.py
model/HiVT/models/: hivt.py
model/LSTM/: lstm_train_test_gaussian.py  lstm_train_test_map.py  lstm_wrapper.py
model/LaneGCN/: data.py  data_summit.py  lanegcn.py  lanegcn_wrapper.py  preprocess_data.py  train_lanegcn.py
model/argoverse_baseline/: constant_acceleration.py  constant_velocity.py  knearest_neighbor.py  summit_knn.py
moped/: moped_pyro4_client.py  moped_pyro4_server.py
src/car_hyp_despot/: CMakeLists.txt
src/car_hyp_despot/src/HypDespot/src/solver/: despot.cpp
src/car_hyp_despot/src/planner/: context_pomdp.cpp  crowd_belief.cpp  crowd_belief.h  moped_param.h  moped_prediction.cpp  moped_prediction.hpp  state.h  world_model.cpp  world_model.h
src/crowd_pomdp_planner/: CMakeLists.txt
src/crowd_pomdp_planner/protos/: agentinfo.proto
src/crowd_pomdp_planner/src/: controller.cpp  world_simulator.cpp
src/gamma_planner/: CMakeLists.txt  package.xml
src/gamma_planner/launch/: gamma_planner.launch
src/gamma_planner/src/: agent_history.py  ego_vehicle_gammapy3.py
src/moped/: agent_client_python.py  agent_server_process_python.py  agent_server_python.py  agentinfo_pb2.py  agentinfo_pb2_grpc.py  moped_pyro4_server.py
src/moped/moped_implementation/: Analyze.py  README.md  env.yml  hivt.yml  only_evaluate.py  planner_wrapper.py  planner_wrapper_temp.py  requirements.txt  requirements_HiVT.txt  run_simulator.py  test.py  train.py
src/moped/moped_implementation/model/: base_model.py
src/moped/moped_implementation/simulator/: base_simulator.py
src/moped/moped_implementation/utils/: baseline_utils.py  eval_forecasting.py  eval_forecasting_helper.py  nn_utils.py  social_features_utils.py  social_features_vectorize.py  summit_dataloader.py  temp_testing.py  temp_testing_map_vec.py  temp_testing_map_vec1.py  temp_testing_vec.py
src/scripts/: calculate_average_num_agents.py  check_duplicates_train_test.py  count_prediction_using_data.py  experiment_summit.sh  launch_docker.py  moped_simulator.py  run_data_collection.py  server_pipline.py  statistics_for_moped.py  statistics_for_moped_2.py  statistics_performance.py  statistics_phong.py  summit_simulator.py  visualize_txt_data.py  visualize_txt_data2.py
src/scripts/benchmark/: average_statistics_of_1_data.py  calculate_average_num_agents.py  plot_distance_histogram.py  statistics_distribution.py  statistics_performance.py  statistics_performance_forslide.py  statistics_performance_server.py  statistics_phong.py  statistics_time_sync.py
src/scripts/experiment_notebook/: Analyze_DESOPOT_multiHz.py  Analyze_RVO_DESPOT.py  Analyze_RVO_radarplot.py  alignment.py  common_performance_stats.py  consis_accel.py  driving_performance_comfort.py  driving_performance_efficiency.py  driving_performance_safety.py  experiment_PID_controller_update.ipynb  experiment_ade.ipynb  experiment_collision.ipynb  experiment_driving_performance.ipynb  experiment_driving_performance_RVOplanner path2.ipynb  experiment_driving_performance_RVOplanner.ipynb  experiment_outcomes.ipynb  experiment_prediction_performance.ipynb  find_free_gpu.py  notebook_RVOplanner_path1.ipynb  prediction_distribution.py  prediction_performance.py  server_visualize_sameHz.ipynb  temp.ipynb  temporal_consistency_calculation.py  test_local_intentions.py  visualization_scatter.py
src/scripts/newplanner/: basic_agent.py  controller.py  ego_run.py  geometry.py  global_route_planner.py  local_planner.py  misc.py  summit.py
src/summit_connector/launch/: connector.launch
src/summit_connector/src/: async_settings.py  crowd_processor.py  ego_vehicle.py  purepursuit_controller.py  speed_controller.py  summit.py
summit_map/map_files/summit_map/: beijing_halluc_bbox_table.npy  beijing_tableidx_to_laneid_map.json  chandni_chowk_halluc_bbox_table.npy  chandni_chowk_npyimage_to_city_se2.npy  highway_driveable_area_mat.npy  highway_halluc_bbox_table.npy  highway_npyimage_to_city_se2.npy  highway_tableidx_to_laneid_map.json  magic_npyimage_to_city_se2.npy  magic_tableidx_to_laneid_map.json  meskel_square_halluc_bbox_table.npy  meskel_square_tableidx_to_laneid_map.json  shi_men_er_lu_halluc_bbox_table.npy  shi_men_er_lu_npyimage_to_city_se2.npy  shi_men_er_lu_tableidx_to_laneid_map.json
summit_map/summit_api/map_utils/: summit_centerline_utils.py  summit_map_api.py  summit_map_loader.py
utils/: baseline_utils.py  common_utils.py  eval_forecasting.py  logger.py  lstm_utils.py  map_features_utils.py  nn_utils.py  social_features_utils.py
(+123 files in other folders)
